--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <style>
+<html>
+<head>
+    <title>Google Map Example</title>
+    <!-- Replace AIzaSyDaJXP838pFvEowdo9LEbF7CQBQZbQzQp0 with your own Google Maps API key -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaJXP838pFvEowdo9LEbF7CQBQZbQzQp0"></script>
+    <style>
+        #map {
+            height: 400px;
+            width: 100%;
+         }
+    </style>
+</head>
+<body>
+    <div id="map"></div>
+    <script>
+        function initMap() {
+            var myLatLng = {lat: 37.7749, lng: -122.4194}; // set the center of the map to San Francisco
 
-        </style>
-    </head>
-    <body>
-    </body>
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 10,
+                center: myLatLng
+            });
+
+            var marker = new google.maps.Marker({
+                position: myLatLng,
+                map: map,
+                title: 'Hello World!'
+            });
+        }
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaJXP838pFvEowdo9LEbF7CQBQZbQzQp0&callback=initMap"></script>
+</body>
 </html>
