--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
             }
             #wrapper {
                 margin: 40px auto 0;
-                width: 266px;
+                width: 500px;
                 position: relative;
             }
             #txt {
                 color: #eaeaea;
             }
             #wheel {
-                width: 250px;
-                height: 250px;
+                background: url('https://minio.theciu.vn/theciu-beta/images/wheel.png');
+                width: 500px;
+                height: 500px;
                 border-radius: 50%;
                 position: relative;
                 overflow: hidden;
@@ -42,9 +43,9 @@
             #wheel:before {
                 content: "";
                 position: absolute;
-                border: 4px solid rgba(0, 0, 0, 0.1);
-                width: 242px;
-                height: 242px;
+                border: 8px solid rgba(0, 0, 0, 0.1);
+                width: 484px;
+                height: 484px;
                 border-radius: 50%;
                 z-index: 1000;
             }
@@ -58,34 +59,50 @@
                 width: 0;
                 height: 0;
                 border-style: solid;
-                border-width: 130px 75px 0;
+                border-width: 370px 203px 0 75px;
                 border-color: #19c transparent;
-                transform-origin: 75px 129px;
-                left: 50px;
-                top: -4px;
+                transform-origin: 75px 373px;
+                left: 175px;
+                top: -119px;
                 opacity: 1;
             }
             #wheel .sec:nth-child(1) {
-                transform: rotate(60deg);
+                transform: rotate(36deg);
                 border-color: #16a085 transparent;
             }
             #wheel .sec:nth-child(2) {
-                transform: rotate(120deg);
+                transform: rotate(72deg);
                 border-color: #2980b9 transparent;
             }
             #wheel .sec:nth-child(3) {
-                transform: rotate(180deg);
+                transform: rotate(108deg);
                 border-color: #34495e transparent;
             }
             #wheel .sec:nth-child(4) {
-                transform: rotate(240deg);
+                transform: rotate(144deg);
                 border-color: #f39c12 transparent;
             }
             #wheel .sec:nth-child(5) {
-                transform: rotate(300deg);
+                transform: rotate(180deg);
                 border-color: #d35400 transparent;
             }
             #wheel .sec:nth-child(6) {
+                transform: rotate(216deg);
+                border-color: #511f19 transparent;
+            }
+            #wheel .sec:nth-child(7) {
+                transform: rotate(252deg);
+                border-color: #aa9896 transparent;
+            }
+            #wheel .sec:nth-child(8) {
+                transform: rotate(288deg);
+                border-color: #0d0807 transparent;
+            }
+            #wheel .sec:nth-child(9) {
+                transform: rotate(324deg);
+                border-color: #0727f7 transparent;
+            }
+            #wheel .sec:nth-child(10) {
                 transform: rotate(360deg);
                 border-color: #c0392b transparent;
             }
@@ -96,8 +113,8 @@
                 z-index: 1000000;
                 display: block;
                 text-align: center;
-                font-size: 36px;
-                margin-left: -15px;
+                font-size: 18px;
+                margin-left: -35px;
                 text-shadow: rgba(255, 255, 255, 0.1) 0px -1px 0px,
                     rgba(0, 0, 0, 0.2) 0px 1px 0px;
             }
@@ -165,8 +182,8 @@
                 font-size: 15px;
             }
             #shine {
-                width: 250px;
-                height: 250px;
+                width: 500px;
+                height: 500px;
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -216,6 +233,18 @@
                     <div class="sec">
                         <span class="fa fa-lightbulb-o"></span>
                     </div>
+                    <div class="sec">
+                        <span class="fa fa-bell-o"></span>
+                    </div>
+                    <div class="sec">
+                        <span class="fa fa-comment-o"></span>
+                    </div>
+                    <div class="sec">
+                        <span class="fa fa-smile-o"></span>
+                    </div>
+                    <div class="sec">
+                        <span class="fa fa-heart-o"></span>
+                    </div>
                 </div>
 
                 <div id="spin">
@@ -226,7 +255,10 @@
             </div>
             <div id="txt"></div>
         </div>
-        <script src="https://kit.fontawesome.com/e8463a2237.js" crossorigin="anonymous"></script>
+        <script
+            src="https://kit.fontawesome.com/e8463a2237.js"
+            crossorigin="anonymous"
+        ></script>
         <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
         <script>
             var degree = 1800;
